hydroflow/tests/compile-fail/surface_demuxenum_port_extramissing.stderr
error: expected one of: square brackets, `mod`, identifier, parentheses
 --> tests/compile-fail/surface_demuxenum_port_extramissing.rs:6:9
  |
6 |         #[derive(DemuxEnum)]
  |         ^

warning: unused import: `hydroflow::util::demux_enum::DemuxEnum`
 --> tests/compile-fail/surface_demuxenum_port_extramissing.rs:1:5
  |
1 | use hydroflow::util::demux_enum::DemuxEnum;
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` on by default

warning: unused import: `var_args`
 --> tests/compile-fail/surface_demuxenum_port_extramissing.rs:2:35
  |
2 | use hydroflow::{hydroflow_syntax, var_args};
  |                                   ^^^^^^^^
